# backend/docs/swagger.json
@@ -65,9 +65,6 @@
         },
         "/application/:applicationId/questions": {
             "get": {
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -89,6 +86,43 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/handlers.ApplicationQuestionResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "test"
+                    }
+                }
+            }
+        },
+        "/application/:applicationId/questions/generate": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "application"
+                ],
+                "summary": "Use AI to generate questions based on questions tags in a specified application",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "applicationId",
+                        "name": "applicationId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handlers.GeneratedQuestion"
+                            }
                         }
                     },
                     "401": {
@@ -418,6 +452,20 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/handlers.QuestionType"
+                    }
+                }
+            }
+        },
+        "handlers.GeneratedQuestion": {
+            "type": "object",
+            "properties": {
+                "questionPrompt": {
+                    "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
                     }
                 }
             }
